[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3.0"
voxel_engine_core = { path = "./voxel_engine_core" }

[workspace]
members = [
    "voxel_engine_core"
]

[workspace.dependencies]
# anyhow = "1.0.75"
bytemuck = { version = "1.12", default-features = false }
circular-queue = "0.2.6"
cgmath = "0.18.0"
env_logger = "0.10.1"
log = "0.4.20"
wgpu = "0.18.0"
winit = { version = "0.29.3", default-features = false }
