[package]
name = "voxel_engine_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = { workspace = true }
bytemuck = { workspace = true, features = [ "derive" ] }
circular-queue = { workspace = true }
cgmath = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
noise = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true, features = [ "rwh_05" ] }
